[package]
name = "cronthat"
authors = [
    "Yann Duperis <contact@yannduperis.com>"
]
description = "Schedule a command with a CRON expression until interruption."
repository = "https://github.com/yannduperis/cronthat"
version = "0.1.0"
edition = "2021"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["CLI", "cron", "schedule"]

[[bin]]
name = "cronthat"
bench = false
path = "src/main.rs"

[dependencies]
cron = {version = "0.12.1"}
clap = {version = "4.5.17", features = ["derive"]}
anyhow = {version = "1.0.89"}
chrono = {version = "0.4.38"}
run_script = "0.10.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tempfile = {version = "3.12.0"}